game click - finished

--- a/index.html
+++ b/index.html
@@ -7,10 +7,45 @@
     <title>Document</title>
 
     <style>
+      body {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
+
       #button-game {
-        background-color: aquamarine;
+        background-color: rgb(226, 226, 226);
         width: 600px;
         height: 600px;
+      }
+
+      #the-button {
+        height: 40px;
+        width: 80px;
+        border-radius: 4px;
+        background-color: rgb(235, 35, 35);
+        color: white;
+        border: none;
+      }
+
+      #info {
+        background-color: black;
+        color: white;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 600px;
+      }
+
+      #info h1 {
+        text-transform: uppercase;
+        font-size: 20px;
+      }
+
+      #info h2 {
+        text-transform: uppercase;
+        font-size: 18px;
       }
     </style>
   </head>
